// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditCard component should display credit card form 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        className="paymentInformationColumn"
        sm={7}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Alert
          className="mb-3"
        >
          You will be charged for the current period of your plan once you add your Credit Card
        </Alert>
        <h3>
          Payment information
        </h3>
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <InputField
            label="Name on the card"
            name="name"
            onChange={[Function]}
            placeholder="Marie Curie"
            required={true}
            type="text"
            value=""
          />
          <Row
            className="formRow"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Col
              className="formColumn"
              sm={7}
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="Card number"
                name="number"
                onChange={[Function]}
                placeholder="4657 7894 1234 7895"
                required={true}
                type="text"
                value=""
              />
            </Col>
            <Col
              className="formColumn"
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="Expiry date"
                name="expDate"
                onChange={[Function]}
                placeholder="05 / 21"
                required={true}
                type="text"
                value=""
              />
            </Col>
            <Col
              className="formColumn"
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="CVC"
                name="cvc"
                onChange={[Function]}
                placeholder="693"
                required={true}
                type="text"
                value=""
              />
            </Col>
          </Row>
          <h3
            className="billingAddressHeader"
          >
            Billing address
          </h3>
          <BillingAddressInputs
            onChange={[Function]}
            value={Object {}}
          />
          <div
            className="formFooter"
          >
            <FormGroup
              color="danger"
              tag="div"
            >
              <Errors />
            </FormGroup>
            <Button
              className=""
              color="success"
              disabled={true}
              tag="button"
            >
              Add payment method
               
               and pay $1000
            </Button>
          </div>
        </Form>
      </Col>
      <Col
        className="planCardColumn"
        sm={4}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <BillingPlanCard
          footer={false}
          isCurrentPlan={true}
          plan={Object {}}
          renderBody={[Function]}
        />
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`CreditCard component should display loader while fetching stripe SDK 1`] = `
<Loader
  inline={false}
  minHeight="500px"
  size="40px"
/>
`;

exports[`CreditCard component should not render the billing address form when a credit card has been added and the contact information is valid 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        className="paymentInformationColumn"
        sm={7}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Alert
          className="mb-3"
        >
          You will be charged for the current period of your plan once you add your Credit Card
        </Alert>
        <h3>
          Payment information
        </h3>
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <InputField
            label="Name on the card"
            name="name"
            onChange={[Function]}
            placeholder="Marie Curie"
            required={true}
            type="text"
            value=""
          />
          <Row
            className="formRow"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Col
              className="formColumn"
              sm={7}
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="Card number"
                name="number"
                onChange={[Function]}
                placeholder="4657 7894 1234 7895"
                required={true}
                type="text"
                value=""
              />
            </Col>
            <Col
              className="formColumn"
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="Expiry date"
                name="expDate"
                onChange={[Function]}
                placeholder="05 / 21"
                required={true}
                type="text"
                value=""
              />
            </Col>
            <Col
              className="formColumn"
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="CVC"
                name="cvc"
                onChange={[Function]}
                placeholder="693"
                required={true}
                type="text"
                value=""
              />
            </Col>
          </Row>
          <div
            className="formFooter"
          >
            <FormGroup
              color="danger"
              tag="div"
            >
              <Errors />
            </FormGroup>
            <Button
              className=""
              color="success"
              disabled={true}
              tag="button"
            >
              Add payment method
               
            </Button>
          </div>
        </Form>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`CreditCard component should render billing plan card with automation footer when current plan is not active and has automation add-on 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        className="paymentInformationColumn"
        sm={7}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Alert
          className="mb-3"
        >
          You will be charged for the current period of your plan once you add your Credit Card
        </Alert>
        <h3>
          Payment information
        </h3>
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <InputField
            label="Name on the card"
            name="name"
            onChange={[Function]}
            placeholder="Marie Curie"
            required={true}
            type="text"
            value=""
          />
          <Row
            className="formRow"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Col
              className="formColumn"
              sm={7}
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="Card number"
                name="number"
                onChange={[Function]}
                placeholder="4657 7894 1234 7895"
                required={true}
                type="text"
                value=""
              />
            </Col>
            <Col
              className="formColumn"
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="Expiry date"
                name="expDate"
                onChange={[Function]}
                placeholder="05 / 21"
                required={true}
                type="text"
                value=""
              />
            </Col>
            <Col
              className="formColumn"
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="CVC"
                name="cvc"
                onChange={[Function]}
                placeholder="693"
                required={true}
                type="text"
                value=""
              />
            </Col>
          </Row>
          <h3
            className="billingAddressHeader"
          >
            Billing address
          </h3>
          <BillingAddressInputs
            onChange={[Function]}
            value={Object {}}
          />
          <div
            className="formFooter"
          >
            <FormGroup
              color="danger"
              tag="div"
            >
              <Errors />
            </FormGroup>
            <Button
              className=""
              color="success"
              disabled={true}
              tag="button"
            >
              Add payment method
               
               and pay $1000
            </Button>
          </div>
        </Form>
      </Col>
      <Col
        className="planCardColumn"
        sm={4}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <BillingPlanCard
          footer={
            <React.Fragment>
              <AutomationAmount
                addOnAmount={200}
                editable={false}
                plan={
                  Object {
                    "amount": 800,
                    "automation_addon_included": true,
                    "currencySign": "$",
                    "name": "basic",
                  }
                }
              />
              <TotalAmount
                addOnAmount={200}
                isEditable={false}
                plan={
                  Object {
                    "amount": 800,
                    "automation_addon_included": true,
                    "currencySign": "$",
                    "name": "basic",
                  }
                }
              />
            </React.Fragment>
          }
          isCurrentPlan={true}
          plan={
            Object {
              "amount": 800,
              "automation_addon_included": true,
              "currencySign": "$",
              "name": "basic",
            }
          }
          renderBody={[Function]}
        />
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`CreditCard component should render nothing if loaded, but no current subscription is set 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        className="paymentInformationColumn"
        sm={7}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Alert
          className="mb-3"
        >
          You will be charged for the current period of your plan once you add your Credit Card
        </Alert>
        <h3>
          Payment information
        </h3>
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <InputField
            label="Name on the card"
            name="name"
            onChange={[Function]}
            placeholder="Marie Curie"
            required={true}
            type="text"
            value=""
          />
          <Row
            className="formRow"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Col
              className="formColumn"
              sm={7}
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="Card number"
                name="number"
                onChange={[Function]}
                placeholder="4657 7894 1234 7895"
                required={true}
                type="text"
                value=""
              />
            </Col>
            <Col
              className="formColumn"
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="Expiry date"
                name="expDate"
                onChange={[Function]}
                placeholder="05 / 21"
                required={true}
                type="text"
                value=""
              />
            </Col>
            <Col
              className="formColumn"
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="CVC"
                name="cvc"
                onChange={[Function]}
                placeholder="693"
                required={true}
                type="text"
                value=""
              />
            </Col>
          </Row>
          <h3
            className="billingAddressHeader"
          >
            Billing address
          </h3>
          <BillingAddressInputs
            onChange={[Function]}
            value={Object {}}
          />
          <div
            className="formFooter"
          >
            <FormGroup
              color="danger"
              tag="div"
            >
              <Errors />
            </FormGroup>
            <Button
              className=""
              color="success"
              disabled={true}
              tag="button"
            >
              Add payment method
               
            </Button>
          </div>
        </Form>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`CreditCard component should render the billing address form when account is missing contact information 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            className="section"
            to="/app/settings/billing/"
          >
            Billing & Usage
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          Add payment method
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        className="paymentInformationColumn"
        sm={7}
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Alert
          className="mb-3"
        >
          You will be charged for the current period of your plan once you add your Credit Card
        </Alert>
        <h3>
          Payment information
        </h3>
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <InputField
            label="Name on the card"
            name="name"
            onChange={[Function]}
            placeholder="Marie Curie"
            required={true}
            type="text"
            value=""
          />
          <Row
            className="formRow"
            tag="div"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Col
              className="formColumn"
              sm={7}
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="Card number"
                name="number"
                onChange={[Function]}
                placeholder="4657 7894 1234 7895"
                required={true}
                type="text"
                value=""
              />
            </Col>
            <Col
              className="formColumn"
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="Expiry date"
                name="expDate"
                onChange={[Function]}
                placeholder="05 / 21"
                required={true}
                type="text"
                value=""
              />
            </Col>
            <Col
              className="formColumn"
              tag="div"
              widths={
                Array [
                  "xs",
                  "sm",
                  "md",
                  "lg",
                  "xl",
                ]
              }
            >
              <InputField
                label="CVC"
                name="cvc"
                onChange={[Function]}
                placeholder="693"
                required={true}
                type="text"
                value=""
              />
            </Col>
          </Row>
          <h3
            className="billingAddressHeader"
          >
            Billing address
          </h3>
          <BillingAddressInputs
            onChange={[Function]}
            value={Object {}}
          />
          <div
            className="formFooter"
          >
            <FormGroup
              color="danger"
              tag="div"
            >
              <Errors />
            </FormGroup>
            <Button
              className=""
              color="success"
              disabled={true}
              tag="button"
            >
              Add payment method
               
            </Button>
          </div>
        </Form>
      </Col>
    </Row>
  </Container>
</div>
`;
